# nano-os

./: .gitignore  MEMORY.md  README.md
apps/nano-calculator/: meson.build
apps/nano-calculator/data/: org.nano.calculator.desktop  style.css
apps/nano-calculator/src/: main.c
apps/nano-clock/: meson.build
apps/nano-clock/data/: org.nano.clock.desktop  style.css
apps/nano-clock/src/: main.c
apps/nano-notes/: meson.build
apps/nano-notes/data/: org.nano.notes.desktop  style.css
apps/nano-notes/src/: main.c
configs/buildroot/: nano_qemu_aarch64_defconfig
configs/kernel/fragments/: base.config  mobile.config  wayland.config
docs/: architecture.md
overlays/rootfs/etc/: environment
overlays/rootfs/etc/dbus-1/system.d/: org.nano.Device.conf  org.nano.Network.conf  org.nano.Notifications.conf  org.nano.Power.conf  org.nano.Settings.conf
overlays/rootfs/etc/nano/: compositor.conf  settings.conf
overlays/rootfs/etc/pipewire/pipewire.conf.d/: nano-audio.conf
overlays/rootfs/etc/profile.d/: nano-env.sh
overlays/rootfs/etc/systemd/logind.conf.d/: nano-mobile.conf
overlays/rootfs/etc/systemd/network/: 20-wired.network  25-wireless.network
overlays/rootfs/etc/systemd/resolved.conf.d/: nano-dns.conf
overlays/rootfs/etc/systemd/sleep.conf.d/: nano-sleep.conf
overlays/rootfs/etc/systemd/system/: nano-compositor.service  nano-device.service  nano-net.service  nano-notif.service  nano-power.service  nano-session.target  nano-settings.service  nano-shell.service  pipewire.service
overlays/rootfs/etc/systemd/system/graphical.target.wants/: nano-session.target
overlays/rootfs/etc/systemd/system/nano-session.target.wants/: nano-compositor.service  nano-net.service  nano-notif.service  nano-power.service  nano-settings.service  nano-shell.service
overlays/rootfs/etc/systemd/system/serial-getty@ttyAMA0.service.d/: autologin.conf
overlays/rootfs/etc/tmpfiles.d/: nano-os.conf
overlays/rootfs/etc/udev/rules.d/: 90-nano-mobile.rules
scripts/: build-image.sh  enter-rootfs.sh  post-build.sh  run-qemu.sh  setup-host.sh
services/nano-device/: meson.build
services/nano-device/data/: org.nano.Device.xml
services/nano-device/src/: main.c
services/nano-net/: meson.build
services/nano-net/data/: org.nano.Network.xml
services/nano-net/src/: main.c
services/nano-notif/: meson.build
services/nano-notif/data/: org.freedesktop.Notifications.xml
services/nano-notif/src/: main.c
services/nano-power/: meson.build
services/nano-power/data/: org.nano.Power.xml
services/nano-power/src/: main.c
services/nano-settings/: meson.build
services/nano-settings/data/: org.nano.Settings.xml
services/nano-settings/src/: main.c  settings-store.c  settings-store.h
ui/nano-compositor/: meson.build
ui/nano-compositor/include/: nano-compositor.h
ui/nano-compositor/src/: input.c  layer.c  main.c  output.c  server.c  xdg.c
ui/nano-shell/: meson.build
ui/nano-shell/data/: nano-shell.gresource.xml  style.css
ui/nano-shell/src/: app-entry.c  app-entry.h  clock.c  clock.h  launcher.c  launcher.h  main.c  notifications.c  notifications.h  shell.c  shell.h  statusbar.c  statusbar.h
